<resources>
    <string name="app_name">Cubika</string>
    <string name="action_settings">Settings</string>
    <string name="a1">DELIVERED</string>
    <string name="a2">INNOVATION</string>
    <string name="a3">BIPM</string>
    <string name="a4">JAVA</string>
    <string name="a5">MAINFRAME</string>
    <string name="a6">BIZSKILL</string>
    <string name="a7">HELPDESK</string>
    <string name="a8"> </string>
    <string name="a9">ADMIN</string>
    <string name="a10">HR</string>
    <string name="a11">EXIT</string>
    <string name="a12">Bot is at rest</string>
    <string name="a13">Recognizer</string>
    <string name="kws_caption">To start say \"Hello Cubicle!\"</string>
    <string name="digits_caption">To try recognition of digits: say something like \"one two three four five\"</string>
</resources>
