<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    android:gravity="center_horizontal"
    tools:context="com.example.pushpal.cubical_bot.MainActivity">

    <LinearLayout
        android:id="@+id/status_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/status_bar_kitkat_height"
            android:background="#202f39" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/status_bar_lollipop_height"
            android:background="#202f39" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/cubicle_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/status_bar"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_image2"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp"
        android:weightSum="5">

        <LinearLayout
            android:id="@+id/column1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/blank1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@null"
                android:src="@drawable/blank" />

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/cubicle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@null"
                android:src="@drawable/cubicle_blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/a5"
                android:textColor="@color/colorOffWhite"
                android:textSize="8sp" />

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/cubicle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@null"
                android:src="@drawable/cubicle_blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/a4"
                android:textColor="@color/colorOffWhite"
                android:textSize="8sp" />

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/cubicle3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@null"
                android:src="@drawable/cubicle_blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/a6"
                android:textColor="@color/colorOffWhite"
                android:textSize="8sp" />

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/cubicle4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@null"
                android:src="@drawable/cubicle_blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/a7"
                android:textColor="@color/colorOffWhite"
                android:textSize="8sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/column2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/cubicle5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@null"
                android:src="@drawable/cubicle_blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/a2"
                android:textColor="@color/colorOffWhite"
                android:textSize="8sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/column3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/blank2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@null"
                android:src="@drawable/blank" />

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/cubicle6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@null"
                android:src="@drawable/cubicle_blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/a3"
                android:textColor="@color/colorOffWhite"
                android:textSize="8sp" />

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/cubicle7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@null"
                android:src="@drawable/cubicle_blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/a8"
                android:textColor="@color/colorOffWhite"
                android:textSize="8sp" />

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/cubicle8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@null"
                android:src="@drawable/cubicle_blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/a6"
                android:textColor="@color/colorOffWhite"
                android:textSize="8sp" />

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/cubicle9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@null"
                android:src="@drawable/cubicle_blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/a7"
                android:textColor="@color/colorOffWhite"
                android:textSize="8sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/column4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/blank3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@null"
                android:src="@drawable/blank" />

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/cubicle10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@null"
                android:src="@drawable/cubicle_blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/a3"
                android:textColor="@color/colorOffWhite"
                android:textSize="8sp" />

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/cubicle11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@null"
                android:src="@drawable/cubicle_blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/a8"
                android:textColor="@color/colorOffWhite"
                android:textSize="8sp" />

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/cubicle12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@null"
                android:src="@drawable/cubicle_blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/a6"
                android:textColor="@color/colorOffWhite"
                android:textSize="8sp" />

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/cubicle13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@null"
                android:src="@drawable/cubicle_blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/a7"
                android:textColor="@color/colorOffWhite"
                android:textSize="8sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/column5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/cubicle14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@null"
                android:src="@drawable/cubicle_blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/a3"
                android:textColor="@color/colorOffWhite"
                android:textSize="8sp" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/botStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/voiceStatus"
        android:layout_marginBottom="2dp"
        android:gravity="center_horizontal"
        android:text="@string/a12"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorOffWhite" />

    <TextView
        android:id="@+id/voiceStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/progressBar"
        android:layout_marginBottom="5dp"
        android:gravity="center_horizontal"
        android:text="@string/a13"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/colorDarkOffWhite" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/CustomProgressBar"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_above="@+id/buttonLayout"
        android:progress="100"
        android:progressDrawable="@drawable/custom_progress" />

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/background_image2"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="4">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/rest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cubicle_layout"
            android:layout_centerHorizontal="true"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/a1"
            android:textColor="@color/colorWhite"
            android:textSize="10sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/admin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@null"
                android:src="@drawable/cubicle_blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a9"
                android:textColor="@color/colorOffWhite"
                android:textSize="8sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/hr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@null"
                android:src="@drawable/cubicle_blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a10"
                android:textColor="@color/colorOffWhite"
                android:textSize="8sp" />
        </LinearLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cubicle_layout"
            android:layout_centerHorizontal="true"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/a11"
            android:textColor="@color/colorWhite"
            android:textSize="10sp"
            android:textStyle="bold"
            android:theme="@style/ExitButtonTheme" />

    </LinearLayout>
</RelativeLayout>